tests/type-checking/control-flow/if-else/if_error_then_body_fail.xdsl
// RUN: choco-opt -p check-assign-target,name-analysis,type-checking %s | filecheck %s

// 
// b: bool = True
// if b:
//   b = 0
// else:
//   b = False
// 


builtin.module() {
  choco.ast.program() {
    choco.ast.var_def() {
      choco.ast.typed_var() ["var_name" = "b"] {
        choco.ast.type_name() ["type_name" = "bool"]
      }
    } {
      choco.ast.literal() ["value" = !choco.ast.bool<True>]
    }
  } {
    choco.ast.if() {
      choco.ast.id_expr() ["id" = "b"]
    } {
      choco.ast.assign() {
        choco.ast.id_expr() ["id" = "b"]
      } {
        choco.ast.literal() ["value" = 0 : !i32]
      }
    } {
      choco.ast.assign() {
        choco.ast.id_expr() ["id" = "b"]
      } {
        choco.ast.literal() ["value" = !choco.ast.bool<False>]
      }
    }
  }
}
// CHECK: Semantic error:
